add_subdirectory(LoongFoundation)
add_subdirectory(LoongWindow)
add_subdirectory(LoongFileSystem)
add_subdirectory(LoongRHI)
add_subdirectory(LoongApp)
add_subdirectory(LoongAsset)
add_subdirectory(LoongResource)
add_subdirectory(LoongRenderer)
add_subdirectory(LoongCore)
add_subdirectory(LoongEditor)
add_subdirectory(LoongAssetConverter)
add_subdirectory(LoongCubeToPanorama)
add_subdirectory(LoongImageChannelSplit)
add_subdirectory(PlayGround)
add_subdirectory(TestDiligentGlfw)
